--- a/styles/layout.css
+++ b/styles/layout.css
@@ -41,5 +41,17 @@ main {
     max-width: 51.25rem;
     margin: 0 auto;
     padding: 5rem;
+
+    h2 {
+      color: var(--text-heading);
+    }
+
+    legend {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: .75rem;
+      color: var(--text-heading);
+    }
   }
 }
