--- a/styles/fields/color.css
+++ b/styles/fields/color.css
@@ -2,20 +2,19 @@
   display: flex;
   justify-content: space-between;
   gap: auto;
+  padding-bottom: 1.75rem;
 }
 
 .color-inner {
-  display: flex;
-  flex: 1;
   position: relative;
   justify-content: center;
   align-items: center;
-  max-width: 2.125rem;
-  height: 2.125rem;
-  width: 2.125rem;
+  max-width: 2.5rem;
+  height: 2.5rem;
+  width: 2.5rem;
   border-radius: 50%;
   background-color: var(--shape-button);
-  padding: .38rem;
+  padding: .375rem;
   
   input, input:focus, input:hover {
     all: unset;
@@ -26,10 +25,14 @@
   }
 
   label {
-    width: 1.375rem;
-    height: 1.375rem;
+    width: 1.75rem;
+    height: 1.75rem;
     border-radius: 50%;
     margin-bottom: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
