--- a/styles/fields/color.css
+++ b/styles/fields/color.css
@@ -1,8 +1,8 @@
 .color-wrapper {
   display: flex;
   justify-content: space-between;
-  gap: auto;
-  padding-bottom: 1.75rem;
+  margin-top: 1rem;
+  margin-bottom: 1.75rem;
 }
 
 .color-inner {
