--- a/styles/global.css
+++ b/styles/global.css
@@ -37,6 +37,10 @@ body {
   background-color: var(--shape-background);
 }
 
+/* main {
+  max-width: 51.25rem;
+} */
+
 h1 {
   font-size: 2.5rem;
   font-family: "Leckerli One", cursive;
