--- a/styles/fields/checkbox.css
+++ b/styles/fields/checkbox.css
@@ -9,7 +9,6 @@
   align-items: center;
   justify-content: center;
   position: relative;
-
   gap: .75rem;
 
   input, input:focus, input:hover {
@@ -27,6 +26,7 @@
     justify-content: center;
     gap: .75rem;
     color: var(--text-heading);
+    height: 3rem;
 
     .style-image {
       background: url(../../assets/icons/dark.svg) no-repeat center/contain;
