--- a/styles/fields/radio.css
+++ b/styles/fields/radio.css
@@ -162,6 +162,7 @@ margin-top: .75rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(8.4rem, 1fr));
   gap: .5rem;
+  margin-bottom: 1.75rem;
 }
 
 .theme-inner {
